# rosconsole_bridge

./: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  stack.xml
include/rosconsole_bridge/: bridge.h
src/: bridge.cpp
test/: CMakeLists.txt  cleanup.cpp
